# opaque-enum

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
opaque-enum/: Cargo.toml
opaque-enum-macros/: Cargo.toml
opaque-enum-macros/src/: lib.rs
opaque-enum/src/: lib.rs
opaque-enum/tests/: opaque_enum.rs
